--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -275,8 +275,8 @@
     "        \n",
     "         q.loc[i,'labels']=labels[i]\n",
     "         j=labels[i]\n",
-    "         q.loc[i,'center lat']=lat[j]\n",
-    "         q.loc[i,'center lon']=lon[j]"
+    "         q.loc[i,'center latitude']=lat[j]\n",
+    "         q.loc[i,'center longitude']=lon[j]"
    ]
   },
   {
